<resources>
    <string name="version">2.4.6</string>
    <string name="app_name">Rintisa</string>

    <string name="email">Correo electronico</string>
    <string name="document_type">Tipo documento</string>
    <string name="document_number">Número documento</string>
    <string name="contrase_a">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="knowledge">Conocimiento</string>
    <string name="uniform">Uniforme</string>
    <string name="materials">Materiales</string>
    <string name="review">Revisión</string>
    <string name="status_pdv">Estado PDV</string>
    <string name="wait_please">Espere un momento por favor.</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="document">N° documento</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="register">Registrarme</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="all_obligatory">Todos los campos son obligatorios.</string>
    <string name="username">Usuario</string>
    <string name="title_activity_client_detail">ClientDetail</string>
    <string name="tab_text_1">Info</string>
    <string name="tab_bins">Tachos</string>
    <string name="tab_text_2">Materiales</string>
    <string name="tab_text_sales">Ventas</string>
    <string name="tab_text_availability">Disponibilidad</string>
    <string name="tab_text_stock">Stock</string>
    <string name="tab_text_3">Enc precio</string>
    <string name="tab_text_audit">Auditoria</string>
    <string name="tab_text_action">Acciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_image">Foto antes</string>
    <string name="end_image">Foto después</string>
    <string name="material">Material</string>
    <string name="brand">Marca</string>
    <string name="quantity">Cant</string>
    <string name="quantity1">Cantidad</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="product">Producto</string>
    <string name="measure_unit">Unidad medida</string>
    <string name="price">Precio</string>
    <string name="title_activity_promoter">PromoterActivity</string>
    <string name="sale">Venta</string>
    <string name="category">Categoria</string>
    <string name="take_photo">Tomar foto</string>
    <string name="gallery">Galeria</string>
    <string name="merchant">Canje</string>
    <string name="upload_images_merchant_visited">Aquí podrá subir las imagenes del antes y después de su gestión.</string>
    <string name="button_save">button_save</string>
    <string name="status">Estado</string>
    <string name="motive">Motivo</string>
    <string name="observation">Observación</string>
    <string name="competencia">Competencia</string>
    <string name="skus">SKUS</string>
    <string name="clients_filter">FILTRAR PUNTOS DE VENTA</string>
    <string name="market">Mercado</string>
    <string name="search">Buscar</string>
    <string name="title_activity_merchant_supervisor">MerchantSupervisorActivity</string>
    <string name="action">Acción</string>
    <string name="exit">Salir</string>
    <string name="filter">Filtrar</string>
    <string name="assistance">Asistencia</string>
    <string name="title_activity_promoter_supervisor">PromoterSupervisorActivity</string>
    <string name="speach_rcn">SPEACH RCN</string>
    <string name="close_day">Cerrar día</string>
    <string name="quantity_day">N° de tickets del día</string>
    <string name="comment_day">Comentario del día</string>
    <string name="share_location">Compartir mi ubicación</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="pet">Mascota</string>

</resources>