<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom"
        android:title="@string/filter"/>
    <item
        android:id="@+id/action_assist"
        android:icon="@drawable/ic_baseline_schedule_24"
        app:showAsAction="always"
        android:title="@string/assistance"/>
    <item
        android:id="@+id/action_progress"
        app:showAsAction="never"
        android:title="Ver avance"/>
    <item
        android:id="@+id/action_pending"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="Visitas pendientes"/>
    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit"/>
</menu>