<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_epp"
        android:icon="@drawable/ic_baseline_assignment_ind_24"
        app:showAsAction="always"
        android:title="EPP"/>
    <item
        android:id="@+id/action_assist"
        android:icon="@drawable/ic_baseline_schedule_24"
        app:showAsAction="always"
        android:title="@string/assistance"/>

    <item
        android:id="@+id/action_finish"
        android:icon="@drawable/ic_baseline_flag_24"
        app:showAsAction="always"
        android:title="@string/close_day"/>
    <item
        android:id="@+id/action_stock"
        android:icon="@drawable/ic_baseline_list_alt_24"
        app:showAsAction="always"
        android:title="Cerrar stock"/>

    <item
        android:id="@+id/action_share_location"
        app:showAsAction="never"
        android:title="@string/share_location"/>

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        app:showAsAction="never"
        android:title="@string/exit"/>

</menu>