<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sale"
        android:textSize="20sp"
        android:textStyle="bold"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:labelFor="@+id/spinner_product"
            android:text="@string/brand" />
        <Spinner
            android:id="@+id/spinner_brand"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:labelFor="@+id/spinner_product"
            android:text="@string/product" />
        <Spinner
            android:id="@+id/spinner_product"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:labelFor="@+id/spinner_measure_unit"
                android:text="@string/measure_unit" />
            <Spinner
                android:id="@+id/spinner_measure_unit"
                android:spinnerMode="dialog"
                android:layout_width="match_parent"

                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/quantity1" />
            <EditText
                android:layout_width="match_parent"
                android:id="@+id/dialog_quantity"
                android:textAlignment="textEnd"
                android:inputType="number"

                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_take_photo_product"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:drawableStart="@drawable/ic_baseline_camera_alt_24"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"
            />
        <Button
            android:id="@+id/dialog_select_gallery_product"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_image_search_24"
            android:text="@string/gallery"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/view_image_evidence"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/loading_evidence"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_save_product"
            android:background="@drawable/back_primary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/dialog_cancel_product"
            android:background="@drawable/back_primary"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>