<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ENCUESTA DE PRECIOS"
        android:textSize="20sp"
        android:textStyle="bold"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_product"
            android:text="@string/brand" />
        <Spinner
            android:id="@+id/spinner_brand"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_product"
            android:text="@string/product" />
        <Spinner
            android:id="@+id/spinner_product"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_measure_unit"
            android:text="@string/measure_unit" />
        <Spinner
            android:id="@+id/spinner_measure_unit"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price" />
        <EditText
            android:layout_width="match_parent"
            android:padding="5dp"
            android:id="@+id/dialog_price"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_save_product"
            android:background="@drawable/back_primary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/dialog_cancel_product"
            android:background="@drawable/back_primary"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>