<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CIERRE DE ASISTENCIA"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_day" />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/quantity_day"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_day" />
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/comment_day"
            android:lines="3"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_save_close_assistance"
            android:background="@drawable/back_primary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save"
            />
        <Button
            android:id="@+id/dialog_cancel_assistance"
            android:background="@drawable/back_primary"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>