<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clients_filter"
        android:textSize="20sp"
        android:textStyle="bold"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_market"
            android:text="@string/market" />
        <AutoCompleteTextView
            android:id="@+id/spinner_market"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinner_service"
            android:text="Servicio" />
        <Spinner
            android:id="@+id/spinner_service"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialog_search"
            android:background="@drawable/back_primary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/search"
            />
        <Button
            android:id="@+id/dialog_cancel"
            android:background="@drawable/back_primary"
            android:backgroundTint="@color/colorSecondary"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
        />
    </LinearLayout>
</LinearLayout>